# wormholesystems-cli

./: .gitmodules  Cargo.toml  LICENSE  README.md  install.sh  solo.yml
.github/workflows/: ci.yml  pages.yml  release.yml
scripts/: e2e.exp
src/: docker.rs  envfile.rs  exec.rs  lib.rs  main.rs  netinfo.rs  plan.rs  secrets.rs  state.rs  wizard.rs
tests/: upstream_templates.rs
