[package]
name = "wormholesystems-cli"
version = "0.1.0"
edition = "2024"
description = "Interactive setup wizard for the Wormhole Systems container stack"

[[bin]]
name = "wsctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
console = "0.15"
inquire = "0.7"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
